--- a/_posts/2018-08-14-biblical-authority.adoc
+++ b/_posts/2018-08-14-biblical-authority.adoc
@@ -1,6 +1,7 @@
 ---
 date: 2018-08-14
 title: Biblical Authority
+author: jcayouette
 categories: bible
 description: How do we know the bible is trustworthy and authoritative?
 type: Document
@@ -8,4 +9,4 @@ set: bible
 set_order: 2
 ---
 
-## Introduction
+== Introduction
