--- a/_posts/2018-08-14-moral-vacuum-naturalism.adoc
+++ b/_posts/2018-08-14-moral-vacuum-naturalism.adoc
@@ -1,6 +1,7 @@
 ---
 date: 2018-08-14
 title: The Moral Vacuum of Naturalism
+author: jcayouette
 categories: ethics
 description: Can Naturalism and evolution really explain morality?
 type: Document
@@ -8,6 +9,4 @@ set: ethics
 set_order: 2
 ---
 
-## Testing The second set item.
-
-## It seems to be working.
+== Introduction 
